# virtomate

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  prepare-pool.sh  pyproject.toml  renovate.json
.github/workflows/: build.yml  check.yml
docs/: conf.py  getting-started.rst  index.rst  installation.rst
docs/man/: index.rst  virtomate-domain-clone.rst  virtomate-domain-iface-list.rst  virtomate-domain-list.rst  virtomate-guest-ping.rst  virtomate-guest-run.rst  virtomate-pool-list.rst  virtomate-volume-list.rst  virtomate.rst
src/virtomate/: __init__.py  domain.py  error.py  guest.py  pool.py  volume.py
tests/: conftest.py  test_virtomate.py
tests/resources/: __init__.py  clone-copy-simple-bios.xml  clone-copy-simple-uefi.xml  clone-linked-simple-bios-raw.xml  clone-reflink-simple-bios-raw.xml  simple-bios.xml  simple-uefi.xml
tests/resources/expectations/: clone-copy-simple-bios.xml  clone-copy-simple-uefi.xml  clone-linked-simple-bios-raw.xml  clone-reflink-simple-bios-raw.xml
tests/resources/fixtures/: simple-bios-raw.xml  simple-bios.xml  simple-uefi.xml
tests/virtomate/: test_clone_operation.py  test_domain.py  test_hypervisor.py  test_mac_factory.py  test_pool.py  test_uuid_factory.py  test_volume.py
